Make post liking work

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -11,6 +11,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon2.png">
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -23,6 +24,7 @@
     <title>feed</title>
   </head>
   <body>
+    <script src="https://use.fontawesome.com/6ff615184f.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
